--- a/EchoCancelWithCaptureAndRender/EchoCancelWithCaptureAndRender.vcxproj
+++ b/EchoCancelWithCaptureAndRender/EchoCancelWithCaptureAndRender.vcxproj
@@ -88,7 +88,7 @@
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <DiagnosticsFormat>Classic</DiagnosticsFormat>
     </ClCompile>
     <Link>
