--- a/EchoCancelWithCaptureAndRender/EchoCancelWithCaptureAndRender.vcxproj
+++ b/EchoCancelWithCaptureAndRender/EchoCancelWithCaptureAndRender.vcxproj
@@ -120,6 +120,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>avrt.lib;winmm.lib;aec.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
